@@ -220,6 +220,10 @@ NXMLElementReader* NXMLTriangulationReader::startContentSubElement(
         bool b;
         if (valueOf(props.lookup("value"), b))
             tri->threeSphere = b;
+    } else if (subTagName == "threeball") {
+        bool b;
+        if (valueOf(props.lookup("value"), b))
+            tri->threeBall = b;
     } else if (subTagName == "H1")
         return new NAbelianGroupPropertyReader(tri->H1);
     else if (subTagName == "H1Rel")
